--- a/Coisa do Exército/Angular/Autolicitacao/src/app/login/login.component.css
+++ b/Coisa do Exército/Angular/Autolicitacao/src/app/login/login.component.css
@@ -1,3 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    background-color: #252525;
+}
+
 div {
     display: flex;
 }
@@ -75,4 +87,18 @@ h1 {
     text-align: center;
     gap: 0.6rem;
     margin-top: 1rem;
+}
+
+button {
+            background-color: blue;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+}
+
+button:hover {
+            background-color: darkblue;
 }
