--- a/Coisa do Exército/Angular/Autolicitacao/src/styles.css
+++ b/Coisa do Exército/Angular/Autolicitacao/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    background-color: #252525;
+}/* You can add global styles to this file, and also import other style files */
